--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code Component</title>
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <div class="wraper">
-    <div class="card">
-      <div class="card-img">
-        <img src="./images/image-qr-code.png" alt="qr code">
-      </div>
-      <div class="card-body">
-        <h3>Improve your front-end skills by building projects</h3>
-        <p>Scan the QR Code to visit Frontend Mentor and take your coding skills to next level</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QR Code Component</title>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="wraper">
+      <div class="card">
+        <div class="card-img">
+          <img src="./images/image-qr-code.png" alt="qr code" />
+        </div>
+        <div class="card-body">
+          <h3>Improve your front-end skills by building projects</h3>
+          <p>
+            Scan the QR Code to visit Frontend Mentor and take your coding
+            skills to next level
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
